<resources>
    <string name="app_name">BadmintonBookingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>

    <string name="register">REGISTER</string>
    <string name="login_username_hint">Username</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="account_information">Account Information</string>
    <string name="time_icon_desc">Time Icon\n</string>
    <string name="address_icon_desc">Location</string>
    <string name="status_icon_desc">Status\n==</string>
    <string name="contact_icon_desc">Contacts</string>
    <string name="yard_image_desc">Yard Image Description</string>
    <string name="image_desc">Image Description</string>
</resources>